# telegram-deobfuscator

./: .gitignore  CMakeLists.txt  Decrypter.cpp  Decrypter.h  Decryptor.cpp  Decryptor.h  Deobfuscator.cpp  Deobfuscator.h  LICENSE  README.md  Unobfuscator.cpp  Unobfuscator.h  decrypt.cpp  decrypt.h  helpers.cpp  helpers.h  main.cpp  unobfuscate.cpp
src/: Decrypter.cpp  Helpers.cpp  Helpers.h  TLConstructors.h
tgnet/: Connection.cpp  ConnectionsManager.cpp  Datacenter.cpp  Datacenter.h
